@@ -1,0 +1,36 @@
+name: Build
+
+on:
+  push:
+    branches:
+      - master
+    tags:
+      - v*
+    paths:
+      - 'OpenCL/**.h'
+      - 'OpenCL/**.cl'
+      - 'include/**.h'
+      - 'src/**.c'
+      - 'tools/**'
+      - '**/Makefile'
+  pull_request:
+    branches:
+      - master
+    paths:
+      - 'OpenCL/**.h'
+      - 'OpenCL/**.cl'
+      - 'include/**.h'
+      - 'src/**.c'
+      - 'tools/**'
+      - '**/Makefile'
+
+jobs:
+  build:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]  # todo: windows-latest - lack of iconv development files
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build
+        run: make
